--- a/trunk/res/values/arrays.xml
+++ b/trunk/res/values/arrays.xml
@@ -451,7 +451,7 @@
 		<item>4 Ball (Orinoco)</item>
 		<item>Orr Multiplex MM</item>
 		<!-- Patterns by PWN -->
-		<item>3/4 Norton\'s Demultiplexer</item>
+		<item>¾ Norton\'s Demultiplexer</item>
 		<item>[34]</item>
 		<item>23[34]</item>
 		<item>20[34]</item>
