--- a/trunk/res/layout/list_group.xml
+++ b/trunk/res/layout/list_group.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
- 
-    <TextView
-        android:id="@+id/list_group_text"
+    android:orientation="horizontal"
+    android:descendantFocusability="blocksDescendants">
+
+    <ImageView
+        android:id="@+id/i_quick_action"
+        android:gravity="center_vertical"
+        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="?android:attr/listPreferredItemHeight"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:gravity="center_vertical"/>
+        android:src="@android:drawable/ic_menu_more"/>
+ 
+    <TextView
+        android:id="@+id/list_text"
+        android:gravity="center_vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="?android:attr/listPreferredItemHeight"
+        android:layout_toLeftOf="@id/i_quick_action"
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
-</LinearLayout>
+</RelativeLayout>
