--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -3,5 +3,14 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 		android:id="@+id/menu_settings"
+        android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/menu_settings"/>
+    <item
+        android:id="@+id/menu_help"
+        android:icon="@android:drawable/ic_menu_help"
+        android:title="@string/menu_help"/>
+    <item
+        android:id="@+id/menu_about"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="@string/menu_about"/>
 </menu>
