--- a/trunk/res/values/colors.xml
+++ b/trunk/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="prop_default_color">#ff0000</color> <!-- red -->
 
     <color name="orange">#ff4a0e</color>
+
+    <color name="footer">#dedede</color>
 </resources>
