--- a/trunk/res/values/styles.xml
+++ b/trunk/res/values/styles.xml
@@ -24,6 +24,12 @@
         <item name="android:background">@null</item>
     </style>
 
+   <style name="FooterBar">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">@color/footer</item>
+    </style>
+
     <style name="SeparatorItemView" parent="GreenDroid.Widget.ItemView.SeparatorItemView">
         <item name="android:background">@drawable/separator_bg</item>
     </style>
