--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -1,8 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/about_txt"
-    android:autoLink="all"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/about_txt"/>
+
+<RelativeLayout 		
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:padding="15dp">
+		
+	<ImageView 
+		android:id="@+id/logo"
+		android:src="@drawable/icon"
+		android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:paddingTop="30dp"
+	    android:paddingLeft="35dp"
+	    android:paddingRight="25dp"
+	    android:paddingBottom="30dp"
+	      />
+		
+	
+	<TextView
+	    android:id="@+id/about_name"
+	    android:autoLink="all"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:text="@string/app_name"
+	    android:textColor="@color/orange"
+        android:textStyle="bold"
+        android:paddingTop="30dp"
+	    android:layout_toRightOf="@+id/logo" />
+	    
+	<TextView
+	    android:id="@+id/about_version"
+	    android:autoLink="all"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:textColor="@color/orange"
+        android:textStyle="bold"
+	    android:layout_toRightOf="@+id/logo"
+	    android:layout_below="@+id/about_name" />
+	    
+	<TextView
+	    android:id="@+id/about_jld"
+	    android:autoLink="all"
+	   	android:text="@string/about_jugglinglab"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@+id/logo" />
+	    
+	    
+	   
+</RelativeLayout>
