--- a/trunk/res/values/themes.xml
+++ b/trunk/res/values/themes.xml
@@ -19,7 +19,7 @@
 
 <resources>
 
-	<style name="Theme.GDCatalog" parent="@style/Theme.GreenDroid.NoTitleBar">
+	<style name="Theme.JugglingLab" parent="@style/Theme.GreenDroid.Light.NoTitleBar">
 	
 		<item name="gdActionBarTitleColor">@color/orange</item>
 		<item name="gdActionBarBackground">@drawable/action_bar_background</item>
